@@ -5,6 +5,12 @@ Version 2.44:  ( Thu Dec 25 11:44:07 IST 2008 )
 Only caused warnings at Build.PL, and is unnecessary now that we
 "use vars".
 
+* Fixed bug #1230339:
+- https://sourceforge.net/tracker/index.php?func=detail&aid=1230339&group_id=6926&atid=106926
+- Can't store and retrive "\nEOT\n"
+- Fixed by checking for the existence of the here-doc terminator in the 
+string, and if so appending more characters.
+
 Version 2.43:  ( Thu Dec  4 18:56:02 IST 2008 )
 -----------------------------------------------
 
